<resources>
    <string name="app_name">FoodyApp_Group07</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_now"> Don\'t have an account? <u>SIGN UP NOW</u></string>
    <string name="policy">I agree to the <u>Temp &amp; Conditions and Privacy Policy</u></string>
    <string name="price"><strike>45.000đ</strike></string>
    <string name="login_error">This account is invalid</string>

    <string name="menu">menu</string>
    <string name="ifood">iFood</string>
    <string name="fast_safe_and_convenient">fast, safe and convenient</string>
    <string name="normal_price"><strike>47.000đ</strike></string>
    <string name="sale_price">35.000đ</string>

    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="login">Sign In</string>
    <string name="phone">Phone</string>
    <string name="register">Create an account</string>
    <string name="back_to_login">Back to Login</string>
</resources>