<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFF7F7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                android:weightSum="10"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imgViewMenu"
                    android:layout_width="50dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:contentDescription="@string/menu"
                    app:srcCompat="@drawable/menu_ic"
                    app:tint="#646161" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:background="@drawable/edt_radius_black"
                    android:padding="4dp">

                    <EditText
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:drawableStart="@drawable/location_ic"
                        android:hint="Your Address"
                        android:inputType="text"
                        android:paddingHorizontal="2dp"
                        android:textStyle="italic"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgViewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user_ic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="#C0FF836E"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-20dp"
                        android:fontFamily="@font/pacifico"
                        android:text="@string/ifood"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-20dp"
                        android:fontFamily="@font/pacifico"
                        android:text="@string/fast_safe_and_convenient"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="-25dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/banner_ic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_border"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:paddingVertical="10dp"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center"
                                android:src="@drawable/coupon_ic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/segoeui"
                                android:text="Promotion"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center"
                                android:src="@drawable/fast_food_ic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/segoeui"
                                android:text="Fast food"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingHorizontal="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center"
                                android:src="@drawable/fried_rice_ic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/segoeui"
                                android:text="Rice"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center"
                                android:src="@drawable/pot_ic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/segoeui"
                                android:text="Hotpot"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center"
                                android:src="@drawable/noodles_ic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/segoeui"
                                android:text="Noodles"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center"
                                android:src="@drawable/barbecue_ic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/segoeui"
                                android:text="Barbecue"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <ImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_gravity="center"
                                android:src="@drawable/drink_ic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/segoeui"
                                android:text="Drinks"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="45dp"
                                    android:layout_height="45dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/milktea_ic" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:fontFamily="@font/segoeui"
                                    android:text="Milk Tea"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/flame_ic"
                android:fontFamily="@font/segoeui"
                android:gravity="left|center"
                android:padding="5dp"
                android:text=" Hot Deals"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/flame_ic"
                android:fontFamily="@font/segoeui"
                android:gravity="left|center"
                android:padding="5dp"
                android:text=" Hot Deals"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewStore_Vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>